Fix z-index of menu

--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -1,5 +1,10 @@
 /************ BEGIN CSS RESET ***************/
-html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, 
+pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, 
+strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, 
+legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, 
+canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, 
+section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -281,6 +286,7 @@ q:after {
 
 a {
     color: #0DAED3;
+    font-weight: bold;
 }
 
 /*  Bold & Uppercase  */
@@ -481,18 +487,12 @@ div#directions p {
     border: 10px #50B748 solid;
 }
 
-.responsive-iframe-container iframe, .vresponsive-iframe-container object, .vresponsive-iframe-container embed {
+.responsive-iframe-container iframe, 
+.vresponsive-iframe-container object, 
+.vresponsive-iframe-container embed {
     width: 100%;
     height: 97%;
 }
-
-/*.responsive-iframe-container iframe, .vresponsive-iframe-container object, .vresponsive-iframe-container embed {
-    position: fixed;
-    top: 9%;
-    left: 9%;
-    width: 82%;
-    height: 59.5%;
-}*/
 /*End responsive calendar*/
 
 /*Controls the placement of the popups for donations, mailing list, etc*/
@@ -744,6 +744,7 @@ body {
 /*************** HEADER *****************/
 header {
     height: 260px;
+    margin-bottom: 3em;
 }
 #header {
     width: 100%;
@@ -769,6 +770,7 @@ header {
     }
     header {
         height: 246px;
+        margin-bottom: 1.2em;
     }
 }
 /*************** END HEADER *****************/
@@ -893,9 +895,6 @@ footer .copyright {
     padding: 1px 2px 1px 2px;
 }
 
-.app .container {
-    margin: 3em 0 0 0;
-}
 .banner-img {
     width: 155px;
     height: 255px;
@@ -1076,8 +1075,7 @@ h2.subtitle-text {
 
 .container {
     width: 100%;
-    margin: 33px 0 0 0;
-    z-index: 10;
+    z-index: 0;
     position: relative;
     min-height: 1500px;
 }
